--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">exp-1</string>
     <string name="button1">Button1</string>
+    <string name="button2">button2</string>
 </resources>
