--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">exp-1</string>
     <string name="button1">Button1</string>
     <string name="button2">button2</string>
+    <string name="button3">Button3</string>
 </resources>
