--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,5 @@
     <string name="button3">Button3</string>
     <string name="button4">Button4</string>
     <string name="button5">Button5</string>
+    <string name="button6">BUTTON6</string>
 </resources>
